# ChessPad

./: .gitattributes  .gitmodules  README.md  build.gradle  pom.xml  sample.pgn  settings.gradle
ChessPadApp/: build.gradle  get-nnue  move-nnue  proguard-rules.pro
ChessPadApp/src/main/: AndroidManifest.xml
ChessPadApp/src/main/assets/: chesspad-about.html
ChessPadApp/src/main/assets/about/: chesspad.html
ChessPadApp/src/main/assets/book/: combined.book
ChessPadApp/src/main/book/: eco.pgn
ChessPadApp/src/main/cpp/: Android.mk  CMakeLists.txt  nativeutil.cpp  stockfishlib.cpp
ChessPadApp/src/main/cpp/stockfish/: .depend  bitbase.cpp  evaluate.cpp  main.cpp  material.cpp  misc.cpp  misc.h  movegen.cpp  movepick.cpp  pawns.cpp  search.cpp  stockfish  thread.cpp  thread.h  types.h  ucioption.cpp
ChessPadApp/src/main/java/com/ab/pgn/: BitStream.java  Board.java  Book.java  Config.java  CpEventObserver.java  CpFile.java  Move.java  Pack.java  PgnGraph.java  PgnItem.java  PgnLogger.java  PgnParser.java  Setup.java  Square.java  Util.java
ChessPadApp/src/main/res/layout/: dlg_merge.xml  fics_login.xml  lichess_login.xml  list_view_row.xml  tag_editor.xml  web_view.xml
ChessPadApp/src/main/res/values/: strings.xml
ChessPadApp/src/test/java/com/ab/pgn/: BaseTest.java  BitStreamTest.java  BoardTest.java  BookBuilder.java  CpFileTest.java  DgtBoardTest.java  MoveValidationTest.java  PackTest.java  PgnGraphTest.java  PgnItemTest.java  PgnMoveParsingTest.java  Utility.java
PgnLib/: build.gradle  proguard-rules.pro
PgnLib/src/main/java/com/ab/pgn/: Board.java  PgnGraph.java  Square.java
app/: app-release.apk  build.gradle
app/src/: MoveValidationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: btn_background.xml
app/src/main/res/layout/: dlg_append.xml  dlg_merge.xml  fics_login.xml  list_view.xml
app/src/main/res/values/: strings.xml
assembly/: bin.xml
cli/com/ab/pgn/: Cli.java
cli/com/ab/pgn/dgtboard/: DgtBoardInterface.java
cli/jni/: com_ab_pgn_dgtboard_DgtBoardInterface.h  dgtbrd13.h  dgtlib.cpp  dgtlib.vcxproj
cli/jni/lib/macosx/: dgtlib.dylib
doc/: ChessPad.docx
etc/: 1-1m  1-2m  1-3m  100k  146.pgn  1k  1m  MaxLange.pgn  brilliant-mates.pgn  cp-crash  cp-crash-2017-01-13_14-13-23  m8n2-4.pgn  s.pgn  s0.pgn  sample.pgn
etc/doc/: ChessPad V0.1.docx  ChessPad V0.1.html  sizes-0.xlsx  sizes.xlsx
etc/doc/ChessPad V0.1.fld/: filelist.xml
etc/test/: exeter_lessons_from_tal.pgn  readme
gradle/wrapper/: gradle-wrapper.properties
save/: build.gradle
(+135 files in other folders)
